--- a/ShoppingApp/Storyboard/Base.lproj/Main.storyboard
+++ b/ShoppingApp/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y2g-iz-Pbc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="445-cc-zcY">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
@@ -433,6 +433,21 @@
             </objects>
             <point key="canvasLocation" x="-1020.2898550724639" y="863.83928571428567"/>
         </scene>
+        <!--Register View Controller-->
+        <scene sceneID="Tlc-AS-QE0">
+            <objects>
+                <viewController storyboardIdentifier="RegisterViewController" id="445-cc-zcY" customClass="RegisterViewController" customModule="ShoppingApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NKy-9T-840">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="vFX-bV-Xy2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Ra-xK-cZP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-300" y="864"/>
+        </scene>
         <!--Home-->
         <scene sceneID="soe-BI-LIn">
             <objects>
@@ -542,8 +557,8 @@
         <image name="language" width="512" height="512"/>
         <image name="linkedin" width="96" height="96"/>
         <image name="noon" width="260" height="120"/>
-        <image name="person" width="256" height="256"/>
         <image name="person" catalog="system" width="128" height="117"/>
+        <image name="person" width="256" height="256"/>
         <image name="rectangle.and.pencil.and.ellipsis" catalog="system" width="128" height="81"/>
         <image name="twitter" width="96" height="96"/>
         <systemColor name="linkColor">
