--- a/ShoppingApp/Cell/Home/MainProduct/TableView/MainProductTableViewCell.xib
+++ b/ShoppingApp/Cell/Home/MainProduct/TableView/MainProductTableViewCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="116" id="KGk-i7-Jjw" customClass="MainProductTableViewCell" customModule="ShoppingApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="326" height="116"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="172" id="KGk-i7-Jjw" customClass="MainProductTableViewCell" customModule="ShoppingApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="379" height="172"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="326" height="116"/>
+                <rect key="frame" x="0.0" y="0.0" width="379" height="172"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="tG3-8G-Mn7">
-                        <rect key="frame" x="0.0" y="0.0" width="326" height="116"/>
+                        <rect key="frame" x="0.0" y="50" width="379" height="122"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zNe-UH-qSp">
                             <size key="itemSize" width="128" height="128"/>
@@ -27,19 +27,40 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="EBh-qd-0e5">
+                        <rect key="frame" x="8" y="10" width="363" height="30"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Home Picks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QDY-Pz-ggj">
+                                <rect key="frame" x="0.0" y="0.0" width="146.5" height="30"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yob-20-ckh">
+                                <rect key="frame" x="206.5" y="0.0" width="156.5" height="30"/>
+                                <state key="normal" title="SHOP NOW"/>
+                            </button>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="tG3-8G-Mn7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="7dj-5X-YJt"/>
-                    <constraint firstAttribute="bottom" secondItem="tG3-8G-Mn7" secondAttribute="bottom" id="IKY-yo-qAv"/>
-                    <constraint firstAttribute="trailing" secondItem="tG3-8G-Mn7" secondAttribute="trailing" id="SoM-k7-qmI"/>
-                    <constraint firstItem="tG3-8G-Mn7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="leF-4l-ru0"/>
+                    <constraint firstAttribute="trailing" secondItem="EBh-qd-0e5" secondAttribute="trailing" constant="8" id="1dT-Vk-aZ0"/>
+                    <constraint firstItem="EBh-qd-0e5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="8hl-H7-y7s"/>
+                    <constraint firstAttribute="bottom" secondItem="tG3-8G-Mn7" secondAttribute="bottom" id="D1A-c1-G7w"/>
+                    <constraint firstItem="tG3-8G-Mn7" firstAttribute="top" secondItem="EBh-qd-0e5" secondAttribute="bottom" constant="10" id="NfL-ZT-mwe"/>
+                    <constraint firstItem="EBh-qd-0e5" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="UjE-9R-Syp"/>
+                    <constraint firstItem="EBh-qd-0e5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="cxB-vH-3K7"/>
+                    <constraint firstItem="tG3-8G-Mn7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="nsR-sR-5pG"/>
+                    <constraint firstAttribute="trailing" secondItem="tG3-8G-Mn7" secondAttribute="trailing" id="z7L-Pv-kTY"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="SectionLabel" destination="QDY-Pz-ggj" id="X9A-Nb-Peh"/>
                 <outlet property="productCollectionView" destination="tG3-8G-Mn7" id="DWM-go-hps"/>
+                <outlet property="showNowButton" destination="Yob-20-ckh" id="Zsv-3X-9gG"/>
             </connections>
-            <point key="canvasLocation" x="62.318840579710148" y="79.6875"/>
+            <point key="canvasLocation" x="23.913043478260871" y="98.4375"/>
         </tableViewCell>
     </objects>
     <resources>
